--- a/chapter5.tex
+++ b/chapter5.tex
@@ -53,10 +53,7 @@
 %\end{landscape}
  \end{figure}
 
-図\ref{fig:systemkousei}のwordparse.jsにて行う形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
-カウンセリング文字起こしテキストデータを形態素解析し1発言および1文に文章を分けた．図\ref{fig:systemkousei}のwordparse.jsでは全角表示のコロン（：）で話者の交代を認識，全角表示のコロン（：），全角表示の句点（．）またはクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため，話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
-
-また，図\ref{fig:systemkousei}のwordparse.jsにて「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し、後述するラジオボタンでの初期選択とする．
+図\ref{fig:systemkousei}のwordparse.jsにて行う形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し、後述するラジオボタンでの初期選択とする．
 この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
 
 
