c4,5(未タイプセット)　from vaio

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -8,7 +8,7 @@
 
 
 
-カウンセリング指導を行う際のニーズを調査するために，本提案システムのプロトタイプを開発した．プロトタイプ動作画面の想定図を図\ref{fig:systemtsukaikata}に示す．プロトタイプ時には軸の表示を行っていなかったが，図\ref{fig:system1mogi2}において，横軸は発言数，縦軸は発言中の文のうち何文がどのグループに分類されるかという割合を表す．模擬データでの可視化結果を図\ref{fig:system1mogi2}に示す．
+カウンセリング指導を行う際のニーズを調査するために，本提案システムのプロトタイプを開発した．模擬データでの可視化結果を図\ref{fig:system1mogi2}に示す．プロトタイプ時には軸の表示を行っていなかったが，図\ref{fig:system1mogi2}において，横軸は発言数，縦軸は発言中の文のうち何文がどのグループに分類されるかという割合を表す．
 \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{systemtsukaikata.png}
@@ -43,6 +43,7 @@
 それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたが
 らなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそ
 うなるのは絶対に許せない！！』というような文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
+原文から，カウンセラーからクライエントへの質問事項の分類の指標として，クライエントの発言をうながしてクライエント自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，クライエントの発言の分量に応じて，それをはさむカウンセラーの発言の縦棒をグラフ上で変えることであると考えた．
 
 \subsubsection{カウンセラーの発言に関する分類}
 
@@ -57,12 +58,5 @@
 
 現状ではその場でラジオボタンの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化してほしいというコメントを得た．
 
-
-\subsubsection{発言量の可視化}
-原文から，カウンセラーからクライエントへの質問事項の分類の指標として，クライエントの発言をうながしてクライエント自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，クライエントの発言の分量に応じて，それをはさむカウンセラーの発言の縦棒をグラフ上で変えることであると考えた．
-
-
-\subsubsection{軸の表示}
-積み重ね折れ線グラフにおいて，縦軸横軸が何を表しているかわからないので，軸を表示するように求められた．よって軸の表示が必要である．
 
 
