--- a/chapter6.tex
+++ b/chapter6.tex
@@ -9,7 +9,7 @@
 %\section{入力データの前処理}
 
 
-%まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，入力データは共通して，下記に述べる全16個のデータを使用した．
+まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．
 %本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．用いた資料の事例検討会の日付は2014年11月11日，2015年1月24日，同年3月28日，同年10月17日，同年11月28日のものを使用した．
 %後述する提案システムに読み込ませるための前処理として，まず，各カウンセリング回ごとにテキストデータを分けた．尚，2015年10月17日および同年11月28日事例検討会用資料については，カウンセリングした年が「X年」として伏せられていたため，本論文内でも以降，これら2点の資料内におけるカウンセリングの年をX年と表記する．
 
@@ -45,14 +45,11 @@
 %\end{itemize}
 %よってテキストデータは計15個になった．
 さらにこの提案システムにおいて，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
-以上%，16個のカウンセリング
-の文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
+以上の文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
 
 
 
 \section{システムの動作結果}
-
-
 前節で述べたデータをそれそれ本システムに入力した際の動作結果について，特筆すべき点をまとめる．
 
 
@@ -100,7 +97,6 @@
 だけの使用では終わらないことが多いため実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるので，この点について改善しないと実用できないというコメントを得た．
 
 
-%ラジオボタンの使い勝手に関するコメント
 
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，自身の症状についての記述は，愛・交友・
 仕事のどれにも当てはまらないことが多く，症状に囚われているクライエントは自己の課題が大半になるといえるため，第４のタスクとされるself task自
