--- a/chapter7.tex
+++ b/chapter7.tex
@@ -4,7 +4,39 @@
 
 
 
-まず，6.2節で述べた
+\section{システムの動作結果}
+前節で述べたデータをそれそれ本システムに入力した際の動作結果について，特筆すべき点をまとめる．
+
+
+
+まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{6_1.png}
+   \end{center}
+   \caption{模擬データ入力時の出力結果}
+   \label{fig:6_1}
+%\end{landscape}
+ \end{figure}
+
+次に，2014年11月19日クライエントB瞑想前のデータを入力した際の出力結果を図\ref{fig:6_2}に示す．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{6_2.png}
+   \end{center}
+   \caption{2014年11月19日クライエントB瞑想前データ入力時の出力結果}
+   \label{fig:6_2}
+%\end{landscape}
+ \end{figure}
+\begin{itemize}
+  \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
+  \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
+\end{itemize}
+となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
+
+また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．なお，最長のテキストデータは約4300文字である．
 \begin{itemize}
   \item 模擬データおよびカウンセリングを実際に書き起こしたテキストデータを提案システムに入力した際にカウンセラーとクライエントの会話の流れの可視化に成功した．
   \item 上記の際に読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．
