順番入れ替え

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -59,4 +59,93 @@
 現状ではその場でラジオボタンの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化してほしいというコメントを得た．
 
 
+\section{提案システム概要}
 
+
+前節では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザーカウンセラーからのコメントをもとにした，提案システム要件抽出について説明した．それを受け，抽出した要件をみたした提案システムの開発を行った．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本節ではその要件をみたした提案システムの概要について説明する．
+ \begin{figure}
+   \begin{center}
+     \includegraphics[width=\linewidth]{ver160203.png}
+   \end{center}
+   \caption{提案システムの模擬データでの可視化結果}
+   \label{fig:ver160203}
+ \end{figure}本提案システムのアルゴリズムについて説明する．
+なお，本提案システムの開発言語はJavaScriptである．
+本提案システムのシステム構成図を図\ref{fig:systemkousei}に，処理フローを図\ref{fig:shoriflow}に示す．
+ \begin{figure}
+   \begin{center}
+     \includegraphics[width=\linewidth]{systemkousei.png}
+   \end{center}
+   \caption{提案システムのシステム構成図}
+   \label{fig:systemkousei}
+ \end{figure}
+ \begin{figure}
+   \begin{center}
+     \includegraphics[width=\linewidth]{shoriflow.png}
+   \end{center}
+   \caption{提案システムの処理フロー}
+   \label{fig:shoriflow}
+ \end{figure}
+まず，ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．jsonファイル読み込み前の本提案システムスクリーンショットを図\ref{fig:yomikomimae2}に示す．
+ \begin{figure}
+   \begin{center}
+     \includegraphics[width=\linewidth]{yomikomimae2.png}
+   \end{center}
+   \caption{jsonファイル読み込み前のシステムスクリーンショット}
+   \label{fig:yomikomimae2}
+ \end{figure}
+形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し、後述するラジオボタンでの初期選択とする．
+この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
+
+
+
+同様に質問内容の形態は前章の要件通り5種類であり，後述する縦棒描画の色の対応を含め次の通りである．濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジはクライエントの問題をカウンセラーがどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+
+
+クライエントの発言の1文ごとの分類と同様に，カウンセラーの1発言の分類初期選択状態の情報をつくり，select.jsに引き渡す．ここでjsonデータを入力した後のカウンセラーの初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{5_2.png}
+   \end{center}
+   \caption{カウンセラー発言初期分類方法}
+   \label{fig:5_2}
+%\end{landscape}
+ \end{figure}
+まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
+
+その後，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフの可視化の際に，データの可視化やデータに基づいてドキュメントを操作するために使用されているJavaScriptライブラリであるD3.js\cite{bostock2012d3}を使用した．模擬データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:gamenseni}に示す．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{gamenseni.png}
+   \end{center}
+   \caption{jsonファイル読み込み後のシステムスクリーンショット（説明付き）}
+   \label{fig:gamenseni}
+%\end{landscape}
+ \end{figure}
+
+\subsubsection{クライエントの発言の描画}
+図\ref{fig:ver160203}において，まず積み重ね折れ線グラフはクライエントの1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内におけるクライエントの発言量の累計の文字数を横軸，つまり時間軸とした．後述するカウンセラーの質問を表現する縦棒はこの時間軸にそって出現する．カウンセラーとクライエントの発言の入れ替わりがわかりやすいように，積み重ね折れ線グラフがクライエントの発言のグループ分布をちょうど表しているのは便宜上発言部分の中央部分になっている．
+縦軸は発言中の1文の数のうち，どのグループに何文入っているかという文の数を表している．
+
+%ここでjsonデータを入力した後のクライエントの発言の各1文の初期分類状態の分類方法について説明する．
+%まず，あらかじめこちらで
+%次に，各単語群を含むクライエントの発言の1文をグループ分けをしていった．
+
+
+
+
+\subsubsection{カウンセラーの発言の描画}
+
+Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．一方本研究では，カウンセラーとクライエントの会話において，クライエントは文ごとに，カウンセラーは発言ごとに描画を行いたい，かつ選択肢表示のためにグラフを省スペースしたいという観点から，カウンセラーの発言を横軸より下に折れ線グラフとして描画するのではなく，クライエントの発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした．こうすることによって，クライエントとカウンセラーの発言が交互に描画されるので，クライエントとカウンセラーの発言の関連性がわかりやすくなった．積み重ね折れ線グラフに重なっている縦棒は，カウンセラーの質問内容の形態を示す．
+
+
+\subsubsection{ラジオボタン}
+積み重ね折れ線グラフが描画された後に，グラフ左下のラジオボタンエリアにて，クライアントの発言の各1文およびカウンセラーの各1発言において，分類を変えると即時にグラフ描画に変更が適用されるようにした．
+%本ラジオボタンエリアがみたした要件については，付録にて記述する．
+
+
+\subsubsection{原文表示機能}
+どこがどの発言を表しているかわからないという問題に対しては，カウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，グラフ右下に周辺の発言を表示する機能を追加することで解決を図った．見やすさのため，グラフの色に対応した文字色ではなく黒い文字で各発言を表示し，それをグラフと対応した色の隅付き括弧【】で囲うようにした．
