--- a/main.tex
+++ b/main.tex
@@ -26,10 +26,10 @@
 \input{chapter2.tex}
 \chapter{カウンセリングについて}
 \input{chapter3.tex}
-\chapter{システム要件の抽出}
-\input{chapter4.tex}
 \chapter{システム概要}
-\input{chapter5.tex}
+\input{chapter4.tex}
+%\chapter{システム概要}
+%\input{chapter5.tex}
 \chapter{システム評価}
 \input{chapter6.tex}
 \chapter{考察}
