要件抽出書き換え

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -32,7 +32,24 @@
 
 
 
-4.1節で説明したプロトタイプを専門家に見ていただき，コメントを得た．そのコメントを元に，以下に述べるシステム要件を抽出した．
+4.1節で説明したプロトタイプを専門家に見ていただき，次に述べるシステム要件を抽出した．
+
+
+
+
+　本提案システムは，セラピストの能力向上に資する可視化分析システムに関するものである．カウンセリングの会話の流れのテキストデータはカウンセラーからの発話によってまったく展開が異なってくるので，実際のクライエント個人の症状の分析よりも，カウンセラートレーニングとして利用するのに適しているからである．カウンセラートレーニングの客観的指標は臨床心理学領域で期待がされている．
+
+
+　クライアントの会話としては，内容がどの課題領域（仕事，交友，愛）に属するのか，セラピストの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+　クライエントからの提出した話題が，どの領域に関するものか，カウンセリン
+グの中でその領域がどのように変わっていくかを分析していくと，そのカウンセ
+リングプロセスがより明確になると考えられる．時系列に沿ってカウンセリングの会話の流れを見ることで，最初にク
+ライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で
+異なった領域に話題が展開した，というような分析も可能になると考えられる．クライエント側の関心に注意を向けるということがカウンセリングの基本であるため，カウンセラー側の関心でクライエントを誘導してしまうことはよくないとされる．そのためのチェックが本システムによって可能になることが期待される．もうひとつの課題としては，ビギナーのカウンセラーは閉じられた質問を多様
+するので，ビギナーが開かれた質問が￥を自由に使えるようにベテランカウンセラーが指導する必要がある．そのチェックも本システムによって可能になることが期待される．
+
+
+
 
 \subsubsection{クライエントの発言に関する分類}
 
@@ -94,7 +111,7 @@
    \caption{jsonファイル読み込み前のシステムスクリーンショット}
    \label{fig:yomikomimae2}
  \end{figure}
-形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し、後述するラジオボタンでの初期選択とする．
+形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
 この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
 
 
