--- a/chapter6.tex
+++ b/chapter6.tex
@@ -9,42 +9,8 @@
 %\section{入力データの前処理}
 
 
-まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．
-%本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．用いた資料の事例検討会の日付は2014年11月11日，2015年1月24日，同年3月28日，同年10月17日，同年11月28日のものを使用した．
-%後述する提案システムに読み込ませるための前処理として，まず，各カウンセリング回ごとにテキストデータを分けた．尚，2015年10月17日および同年11月28日事例検討会用資料については，カウンセリングした年が「X年」として伏せられていたため，本論文内でも以降，これら2点の資料内におけるカウンセリングの年をX年と表記する．
-
-
-%\begin{itemize}
-%\item カウンセリング日程A（某年11月11日事例検討会資料より）
-%\item カウンセリング日程B（某年1月24日事例検討会資料より）
-%\item カウンセリング（2015年3月28日事例検討会資料より）
-%\item カウンセリング（2015年10月17日事例検討会資料より）
-%\item カウンセリング（同上）
-%\item カウンセリング（2015年11月28日事例検討会資料より）
-%\end{itemize}
-%2014年9月11日についてはクライエントA,Bの2名がいたので，この日のデータについてはさらにクライエントごとにテキストデータを分けた．またこのクライエントAは2014年1月29日のクライエントと同一人物，クライエントBは2014年11月19日のクライエントと同一人物である．以降，本論文においてもこの2名のクライエントを順にクライエントA,Bと呼ぶ．
-%一方，X年8月10日，X年10月1日，X年10月30日では同一の一名のクライエントが対象とされていた．対象データ内では「クライエントA」と呼ばれているが，前述のクライエントAとは同一人物ではないため，以降，本論文中においてはクライエントCと呼ぶことにする．
-
-%ここで2014年9月11日，2014年11月19日，2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので，瞑想前後で分けたテキストデータも用意した．%つまり
-%\begin{itemize}
-%\item 2014年9月11日クライエントA
-%\item 2014年9月11日クライエントA瞑想前
-%\item 2014年9月11日クライエントA瞑想後
-%\item 2014年9月11日クライエントB
-%\item 2014年9月11日クライエントB瞑想前
-%\item 2014年9月11日クライエントB瞑想後
-%\item 2014年11月19日クライエントB
-%\item 2014年11月19日クライエントB瞑想前
-%\item 2014年11月19日クライエントB瞑想後
-%\item 2014年1月29日クライエントA
-%\item 2014年1月29日クライエントA瞑想前
-%\item 2014年1月29日クライエントA瞑想後
-%\item X年8月10日クライエントC
-%\item X年10月1日クライエントC
-%\item X年10月30日クライエントC
-%\end{itemize}
-%よってテキストデータは計15個になった．
-さらにこの提案システムにおいて，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
+まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，b，c，d，e，f，g，h，i，j，k，l，m，n，oと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
+また，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
 以上の文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
 
 
@@ -57,9 +23,7 @@
 
 
 
-\section{ユーザーからのコメント}
-
-6.1節で述べたデータをカウンセラー1名に渡し，Web上から本提案システムを利用していただき、主に本システムの使い勝手についてコメントを得た．
+以上16個のjsonファイルをカウンセラー1名に渡し，Web上から本提案システムを利用していただき、主に本システムの使い勝手についてコメントを得た．
 
 まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，長い文章を入力した際に，その日
 だけの使用では終わらないことが多いため実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるので，この点について改善しないと実用できないというコメントを得た．
