--- a/chapter7.tex
+++ b/chapter7.tex
@@ -58,7 +58,7 @@
 
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，クライエント自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要があると考えるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
 
-ページ右下側に表示されるカウンセラーの実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては、ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
+ページ右下側に表示されるカウンセラーの実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．薄い色や青色が見えにくいという問題に対しては，ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
 
 \section{今後の課題}
 
