--- a/chapter4.tex
+++ b/chapter4.tex
@@ -111,15 +111,15 @@
    \caption{jsonファイル読み込み前のシステムスクリーンショット}
    \label{fig:yomikomimae2}
  \end{figure}
-形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
-この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
+形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．この後，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言ずつのテーブルをつくる．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
+%この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
 
 
 
 同様に質問内容の形態は前章の要件通り5種類であり，後述する縦棒描画の色の対応を含め次の通りである．濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジはクライエントの問題をカウンセラーがどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
 
 
-クライエントの発言の1文ごとの分類と同様に，カウンセラーの1発言の分類初期選択状態の情報をつくり，select.jsに引き渡す．ここでjsonデータを入力した後のカウンセラーの初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
+カウンセラーの1発言についても，クライエントの発言の1文ごとの分類と同様に，分類初期選択状態の情報をつくり，select.jsに引き渡す．ここでjsonデータを入力した後のカウンセラーの初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
