図のタイトルソースn

--- a/chapter7.tex
+++ b/chapter7.tex
@@ -20,13 +20,13 @@
 %\end{landscape}
  \end{figure}
 
-次に，2014年11月19日クライエントB瞑想前のデータを入力した際の出力結果を図\ref{fig:6_2}に示す．
+次に，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．
  \begin{figure}
 %\begin{landscape}
    \begin{center}
      \includegraphics[width=\linewidth]{6_2.png}
    \end{center}
-   \caption{2014年11月19日クライエントB瞑想前データ入力時の出力結果}
+   \caption{ソースn入力時の出力結果}
    \label{fig:6_2}
 %\end{landscape}
  \end{figure}
