--- a/chapter1.tex
+++ b/chapter1.tex
@@ -6,7 +6,7 @@
 
 そこで，ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている．しかし現状では，クライエントとビギナーのカウンセラーとのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，ベテランのカウンセラーらが読んで，議論をする，という流れである．そのため，ベテランのカウンセラーが会話の流れを文字で読んでから各々カウンセリング内容を分析するという流れに，時間を要する．
 
-そこで本研究では，クライエントとビギナーのカウンセラーとの会話の流れを，時間軸に沿って可視化するWebシステムを開発した．本提案システムはベテランのカウンセラーをユーザーとして想定した．ベテランからビギナーへのカウンセリング指導において重要なことは，ビギナーがクライエントにどのような質問を投げかけるかによって，ビギナーがクライエントからどのような「対人関係上の問題」を引き出したかである．それがベテランのカウンセラーにとってすぐにわかるようになることが，このシステムによって期待されることである．
+そこで本研究では，クライエントとビギナーのカウンセラーとの会話の流れを，時間軸に沿って可視化するWebシステムを開発した．本提案システムはベテランのカウンセラーをユーザーとして想定した．ベテランからビギナーへのカウンセリング指導において重要なことは，ビギナーがクライエントにどのような質問を投げかけるかによって，ビギナーがクライエントからどのような「対人関係上の問題」を引き出したかである．それがベテランのカウンセラーにとって，一目見てすぐにわかるようになることが，このシステムによって期待されることである．
 
 
 
