大体順番と体裁整えた

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -3,50 +3,30 @@
 
 
 
-\section{提案システムのプロトタイプ開発}
 
 
 
 
-カウンセリング指導を行う際のニーズを調査するために，本提案システムのプロトタイプを開発した．模擬データでの可視化結果を図\ref{fig:system1mogi2}に示す．プロトタイプ時には軸の表示を行っていなかったが，図\ref{fig:system1mogi2}において，横軸は発言数，縦軸は発言中の文のうち何文がどのグループに分類されるかという割合を表す．
-\begin{figure}
-   \begin{center}
-     \includegraphics[width=\linewidth]{systemtsukaikata.png}
-   \end{center}
-   \caption{プロトタイプの想定図}
-   \label{fig:systemtsukaikata}
- \end{figure}
-\begin{figure}
-   \begin{center}
-     \includegraphics[width=\linewidth]{system1mogi2.png}
-   \end{center}
-   \caption{プロトタイプのスクリーンショット}
-   \label{fig:system1mogi2}
-\end{figure}
+\section{システム要件抽出}
 
 
 
 
-\section{カウンセラーからのフィードバックおよび要件抽出}
+まず専門家にインタビューを行い，次に述べるシステム要件を抽出した．
 
 
 
 
-4.1節で説明したプロトタイプを専門家に見ていただき，次に述べるシステム要件を抽出した．
+本提案システムの要件は大きく2点挙げられる．1つ目は，カウンセリングの会話の流れのテキストデータはカウンセラーからの発話によってまったく展開が異なってくるので，実際のクライエント個人の症状の分析よりも，カウンセラートレーニングとして利用するのに適しているからである．本提案システムは，カウンセラーの能力向上に資する可視化分析システムに関するものとして，カウンセラートレーニングの客観的指標は臨床心理学領域で期待がされている．
 
 
-
-
-　本提案システムは，セラピストの能力向上に資する可視化分析システムに関するものである．カウンセリングの会話の流れのテキストデータはカウンセラーからの発話によってまったく展開が異なってくるので，実際のクライエント個人の症状の分析よりも，カウンセラートレーニングとして利用するのに適しているからである．カウンセラートレーニングの客観的指標は臨床心理学領域で期待がされている．
-
-
-　クライアントの会話としては，内容がどの課題領域（仕事，交友，愛）に属するのか，セラピストの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
-　クライエントからの提出した話題が，どの領域に関するものか，カウンセリン
+クライアントの会話としては，内容がどの課題領域（仕事，交友，愛）に属するのか，セラピストの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+クライエントからの提出した話題が，どの領域に関するものか，カウンセリン
 グの中でその領域がどのように変わっていくかを分析していくと，そのカウンセ
 リングプロセスがより明確になると考えられる．時系列に沿ってカウンセリングの会話の流れを見ることで，最初にク
 ライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で
 異なった領域に話題が展開した，というような分析も可能になると考えられる．クライエント側の関心に注意を向けるということがカウンセリングの基本であるため，カウンセラー側の関心でクライエントを誘導してしまうことはよくないとされる．そのためのチェックが本システムによって可能になることが期待される．もうひとつの課題としては，ビギナーのカウンセラーは閉じられた質問を多様
-するので，ビギナーが開かれた質問が￥を自由に使えるようにベテランカウンセラーが指導する必要がある．そのチェックも本システムによって可能になることが期待される．
+するので，ビギナーが開かれた質問を自由に使えるようにベテランカウンセラーが指導する必要がある．そのチェックも本システムによって可能になることが期待される．
 
 
 
