--- a/chapter6.tex
+++ b/chapter6.tex
@@ -23,21 +23,64 @@
 
 
 
-以上16個のjsonファイルをカウンセラー1名に渡し，Web上から本提案システムを利用していただき、主に本システムの使い勝手についてコメントを得た．
+以上16個のjsonファイルをユーザー1名に渡し，Web上から本提案システムを利用していただいた．
+
+
+
+\section{提案システムからの出力結果}
+
+
+本節では，ユーザーに見ていただいた提案システムの出力結果について，特筆すべき点をまとめる．
+
+
+まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{6_1.png}
+   \end{center}
+   \caption{模擬データ入力時の出力結果}
+   \label{fig:6_1}
+%\end{landscape}
+ \end{figure}
+
+次に，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{6_2.png}
+   \end{center}
+   \caption{ソースn入力時の出力結果}
+   \label{fig:6_2}
+%\end{landscape}
+ \end{figure}
+\begin{itemize}
+  \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
+  \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
+\end{itemize}
+となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
+
+また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．なお，最長のテキストデータは約4300文字である．
+
+
+
+\section{ユーザーコメント}
+
+
+ユーザーから，主に本システムの使い勝手についてコメントを得た．
 
 まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，長い文章を入力した際に，その日
-だけの使用では終わらないことが多いため実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるので，この点について改善しないと実用できないというコメントを得た．
+だけの使用では終わらないことが多いため，実際開くたびに毎回同じことをさせられるのは，大変苦痛になっているというコメントを得た．
 
 
 
-アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，自身の症状についての記述は，愛・交友・
-仕事のどれにも当てはまらないことが多く，症状に囚われているクライエントは自己の課題が大半になるといえるため，第４のタスクとされるself task自
-己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
-ただく方がいいかもしれないというコメントを得た．
+アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，自身の症状に関する記述は，愛・交友・
+仕事のどれにも当てはまらないことが多く，症状に囚われているクライエントは自己のタスクが大半になるといえるため，第４のタスクとされる自
+己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．
 
 
 
-また，本提案システム全体の配色面に関してさらなる視認性の向上が求められている．具体的には黄色と灰色は，バックの白とかぶって見えにくくなっているという点と，青色の隅付き括弧【】が黒字と判別がつきにくい
+また，本提案システム全体の配色面に関してさらなる視認性の向上を求めるコメントを得た．具体的には黄色と灰色は，バックの白とかぶって見えにくくなっているという点と，青色の隅付き括弧【】が黒字と判別がつきにくい
 という点である．
 
 
