--- a/chapter7.tex
+++ b/chapter7.tex
@@ -4,32 +4,15 @@
 
 
 
-\section{システムの動作結果}
+\section{出力結果の考察}
 前節で述べたデータをそれそれ本システムに入力した際の動作結果について，特筆すべき点をまとめる．
 
 
 
-まず模擬データを入力した際の出力結果を図\ref{fig:6_1}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
- \begin{figure}
-%\begin{landscape}
-   \begin{center}
-     \includegraphics[width=\linewidth]{6_1.png}
-   \end{center}
-   \caption{模擬データ入力時の出力結果}
-   \label{fig:6_1}
-%\end{landscape}
- \end{figure}
+まず模擬データを入力した際の出力結果である図\ref{fig:6_1}について述べる．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」というカウンセラーの発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこのカウンセラー発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」というクライエントの発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
 
-次に，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．
- \begin{figure}
-%\begin{landscape}
-   \begin{center}
-     \includegraphics[width=\linewidth]{6_2.png}
-   \end{center}
-   \caption{ソースn入力時の出力結果}
-   \label{fig:6_2}
-%\end{landscape}
- \end{figure}
+
+次に，ソースnを入力した際の出力結果である\ref{fig:6_2}について述べる．
 \begin{itemize}
   \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
   \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
@@ -45,9 +28,11 @@
 したがって，会話の流れがベテランのカウンセラーにとってすぐにわかるようになることが，本研究の目的を達成したと考える．
 
 
-ただし6.3節で述べた通り保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
+しかし前章で述べた通り，保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．次章ではユーザーコメントに対する考察について述べる．
 
-まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が求められている．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，ご多忙なベテランカウンセラーが長文テキストデータを一度に修正しきれないためにこの機能が求められているとかんがえられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
+\section{ユーザーコメントの考察}
+
+まず本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられる．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，ご多忙なベテランカウンセラーが長文テキストデータを一度に修正しきれないためにこの機能が求められているとかんがえられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
 
 
 次に，本提案システムに対するコメントとして，ラジオボタンの使い勝手に関するコメントが多かった．
@@ -62,6 +47,7 @@
 
 \section{今後の課題}
 
+ビギナーのカウンセラーを指導する目的で本システムを実用化するためには，まだ議論すべき点が残されている．本論文内でまだ検証しておらず，今後検証していくべき課題について述べる．
 
 \begin{itemize}
 \item そもそも，会話の流れの可視化に積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
