--- a/chapter7.tex
+++ b/chapter7.tex
@@ -47,7 +47,7 @@
 
 \section{今後の課題}
 
-ビギナーのカウンセラーを指導する目的で本システムを実用化するためには，まだ議論すべき点が残されている．本論文内でまだ検証しておらず，今後検証していくべき課題について述べる．
+ビギナーのカウンセラーを指導する目的で本システムを実用化するためには，まだ議論すべき点が残されていると考える．本論文内でまだ検証しておらず，今後検証していくべきだと考える課題について述べる．
 
 \begin{itemize}
 \item そもそも，会話の流れの可視化に積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
