箇条書きだったところを修正

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -42,6 +42,8 @@
 うなるのは絶対に許せない！！』というような文章について，専門家は次の通りに分類する．第1文は愛の課題，第2文は仕事の課題，第3文は愛の課題に分類する．
 原文から，カウンセラーからクライエントへの質問事項の分類の指標として，クライエントの発言をうながしてクライエント自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであるというコメントを得た．ここから得られる要件は，クライエントの発言の分量に応じて，それをはさむカウンセラーの発言の縦棒をグラフ上で変えることであると考えた．
 
+また，ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化してほしいというコメントを得た．
+
 \subsubsection{カウンセラーの発言に関する分類}
 
 カウンセラーの発言の分類について，まずカウンセラーの発言も，次章で述べる初期分類は適当ではないことがあるので，クライエントからの返答だけでなく，カウンセラーの質問区分けも手動で修正したいというコメントを得た．
@@ -51,9 +53,7 @@
 
 
 
-\subsubsection{インタラクティブ性}
 
-現状ではその場でラジオボタンの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化してほしいというコメントを得た．
 
 
 \section{提案システム概要}
@@ -83,7 +83,9 @@
    \caption{提案システムの処理フロー}
    \label{fig:shoriflow}
  \end{figure}
-まず，ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．jsonファイル読み込み前の本提案システムスクリーンショットを図\ref{fig:yomikomimae2}に示す．
+
+%\subsubsection{形態素解析}
+まずブラウザ上で各テキストのjsonファイルを読み込んで，テキストを単語ごとに区切る形態素解析を行う．jsonファイル読み込み前の本提案システムスクリーンショットを図\ref{fig:yomikomimae2}に示す．
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{yomikomimae2.png}
@@ -91,7 +93,10 @@
    \caption{jsonファイル読み込み前のシステムスクリーンショット}
    \label{fig:yomikomimae2}
  \end{figure}
-形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．この後，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言ずつのテーブルをつくる．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
+形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
+
+%\subsubsection{1文や1発言の作成と分類}
+形態素解析された単語群から，句点やクエスチョンマークを終点と定義して1文ずつのテーブルをつくる．さらに，話者の切り替わりを全角コロンで定義し，全角コロンと全角コロンの間の文のグループを1発言と定義し，発言ずつのテーブルをつくる．「クライエントの発言においてこれを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておき，どの文がどのグループの単語をもつかという情報を，図\ref{fig:systemkousei}のselect.jsに引き渡し，後述するラジオボタンでの初期選択とする．
 %この初期選択において，今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
 
 
@@ -111,6 +116,7 @@
  \end{figure}
 まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
+%\subsubsection{グラフ描画}
 その後，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフの可視化の際に，データの可視化やデータに基づいてドキュメントを操作するために使用されているJavaScriptライブラリであるD3.js\cite{bostock2012d3}を使用した．模擬データを本システムに入力した後の説明付きスクリーンショット画像を図\ref{fig:gamenseni}に示す．
  \begin{figure}
 %\begin{landscape}
@@ -122,7 +128,7 @@
 %\end{landscape}
  \end{figure}
 
-\subsubsection{クライエントの発言の描画}
+\subsubsection{クライエント発言ビュー}
 図\ref{fig:ver160203}において，まず積み重ね折れ線グラフはクライエントの1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
 横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内におけるクライエントの発言量の累計の文字数を横軸，つまり時間軸とした．後述するカウンセラーの質問を表現する縦棒はこの時間軸にそって出現する．カウンセラーとクライエントの発言の入れ替わりがわかりやすいように，積み重ね折れ線グラフがクライエントの発言のグループ分布をちょうど表しているのは便宜上発言部分の中央部分になっている．
 縦軸は発言中の1文の数のうち，どのグループに何文入っているかという文の数を表している．
@@ -134,12 +140,12 @@
 
 
 
-\subsubsection{カウンセラーの発言の描画}
+\subsubsection{カウンセラー発言ビュー}
 
 Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．一方本研究では，カウンセラーとクライエントの会話において，クライエントは文ごとに，カウンセラーは発言ごとに描画を行いたい，かつ選択肢表示のためにグラフを省スペースしたいという観点から，カウンセラーの発言を横軸より下に折れ線グラフとして描画するのではなく，クライエントの発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした．こうすることによって，クライエントとカウンセラーの発言が交互に描画されるので，クライエントとカウンセラーの発言の関連性がわかりやすくなった．積み重ね折れ線グラフに重なっている縦棒は，カウンセラーの質問内容の形態を示す．
 
 
-\subsubsection{ラジオボタン}
+\subsubsection{発言分類手動修正機能}
 積み重ね折れ線グラフが描画された後に，グラフ左下のラジオボタンエリアにて，クライアントの発言の各1文およびカウンセラーの各1発言において，分類を変えると即時にグラフ描画に変更が適用されるようにした．
 %本ラジオボタンエリアがみたした要件については，付録にて記述する．
 
