--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -2,6 +2,6 @@
 
 本研究を進めるにあたり，有益な御指導，御助言を頂きました京都大学学術情報メディアセンタービジュアリゼーション研究分野の小山田耕二教授，学際融合教育研究推進センター政策のための科学ユニットの久木元伸如特定講師，神戸大学 システム情報学研究科の坂本尚久講師に深く感謝致します．
 
-本研究を進めるにあたり，プログラミング技術を始め，様々な御助言を頂きました京都大学大学院工学研究科博士後期課程３年生の尾上洋介氏をはじめとする院生の先輩の皆様に深く感謝致します．
+本研究を進めるにあたり，プログラミング技術を始め，様々な御助言を頂きました京都大学大学院工学研究科博士後期課程3年生の尾上洋介氏，京都大学大学院人間・環境学研究科修士課程1年生の今井晨介氏をはじめとする院生の先輩の皆様に深く感謝致します．
 
 最後に，家族をはじめとする私の学生生活を支えてくださったすべての皆様へ心から感謝の意を表します．
