--- a/chapter7.tex
+++ b/chapter7.tex
@@ -49,10 +49,16 @@
 
 ビギナーのカウンセラーを指導する目的で本システムを実用化するためには，まだ議論すべき点が残されていると考える．本論文内でまだ検証しておらず，今後検証していくべきだと考える課題について述べる．
 
-\begin{itemize}
-\item そもそも，会話の流れの可視化に積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
+
+
+\subsubsection{他のグラフ描画との比較}
+そもそも，会話の流れの可視化に積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
 クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
-\item 本提案システムでは，横軸は患者の全発言の文字数（縦棒同士の間隔は，患者の各発言の文字数に比例），縦軸は，患者の各発言内において，それぞれ「交友」「愛」「仕事」に属する文の数（単位：文）を表しているが，縦軸に関して，たとえば「交友」の場合
+
+
+
+\subsubsection{軸の値の取り方}
+本提案システムでは，横軸は患者の全発言の文字数（縦棒同士の間隔は，患者の各発言の文字数に比例），縦軸は，患者の各発言内において，それぞれ「交友」「愛」「仕事」に属する文の数（単位：文）を表しているが，縦軸に関して，たとえば「交友」の場合
 \begin{enumerate}
   \item 患者の各発言内において，「交友」に属する文の数（単位：文）
   \item 患者の各発言内において，「交友」に属する文が何文あるかの割合（単位：％）
@@ -60,10 +66,28 @@
   \item 患者の各発言内において，全ての文字数に対して「交友」に属する文の文字数が占める割合（単位：％）
 \end{enumerate}
 など，どのような数値を用いればより適当な判断が可能か，吟味する必要があると考える．
-\item 縦棒の上に発言番号を振ることで，どの縦棒がどのカウンセラーの発言か，よりわかりやすくする．
-\item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，特に患者の症状に関しては「愛」「仕事」「交友」のどれにも属さず，第4，第5のグループである「自己」と「スピリチュアル」に属することが多いので，「自己」と「スピリチュアル」のグループを加える必要があると考える．
-\item ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関してまだ改善の余地があると考える．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要があると考える．
-\item 本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーであるベテランのカウンセラーにそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能を搭載する必要もあると考える．
-\item 本システムのユーザーのカウンセラーに，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまうので，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能を提案したところ，是非欲しいとコメントを得たので，搭載する予定である．
-\item ユーザーから見た本提案システムの使い勝手について，まだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，定量的評価を行うことが必要であると考える．たとえば意味差別法（semantic differential scale method）\cite{attrakdiff}は，見やすい-見にくい，使いやすい-使いづらいなどの対立する形容詞の対に関して5段階あるいは7段階の尺度を用いて，商品やシステムの感情的なイメージを定量的に分析する方法である．
-\end{itemize}
+
+
+
+
+
+
+
+\subsubsection{クライエントの発言分類項目の追加}
+アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，特に患者の症状に関しては「愛」「仕事」「交友」のどれにも属さず，第4，第5のグループである「自己」と「スピリチュアル」に属することが多いので，「自己」と「スピリチュアル」のグループを加える必要があると考える．
+
+
+\subsubsection{視認性の改善}
+ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関してまだ改善の余地があると考える．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要があると考える．また，縦棒の上に発言番号を振ることで，どの縦棒がどのカウンセラーの発言か，よりわかりやすくする必要があると考える．
+
+
+\subsubsection{入力用フォーマット自動生成機能}
+本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーであるベテランのカウンセラーにそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能を搭載する必要もあると考える．
+
+
+\subsubsection{ズーム機能}
+本システムのユーザーのカウンセラーに，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまうので，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能を提案したところ，是非欲しいとコメントを得たので，搭載しようと考える．
+
+
+\subsubsection{視覚的表現やユーザーインタラクションの定量的評価}
+ユーザーから見た本提案システムの使い勝手について，まだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，定量的評価を行うことが必要であると考える．たとえば意味差別法（semantic differential scale method）\cite{attrakdiff}は，見やすい-見にくい，使いやすい-使いづらいなどの対立する形容詞の対に関して5段階あるいは7段階の尺度を用いて，商品やシステムの感情的なイメージを定量的に分析する方法である．
